# polymarket-glm

./: .env.example  .gitignore  ANALYSIS_PLAN.md  AUDIT_FILE_TREE.txt  NEXT_STEPS.md  PLAN.md  README.md  polymarket_glm.db  polymarket_glm.db-shm  polymarket_glm.db-wal  pyproject.toml  recon.py
docs/: AUDITORIA_REPOSITORIO.md  CLOB_API_SETUP.md  GO_LIVE_RUNBOOK.md
docs/issues/: 01-trailing-stop-bug.md  02-ensemble-paraphrase-bug.md  03-dedup-ensemble-estimator.md  04-dedup-llm-router-config.md  (+9 more)
polymarket_glm/: __init__.py  config.py  models.py
polymarket_glm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: polymarket-simulation.service  run_bot.py  run_simulation.py
tests/: test_alerts.py  test_audit_log.py  test_backtest.py  test_barriers.py  test_calibration.py  test_cli.py  test_config.py  test_context_fetcher.py  test_controller_executor.py  test_daily_report.py  test_dashboard.py  test_database.py  test_decision_result.py  test_engine.py  test_ensemble.py  test_ensemble_estimator.py  test_estimator.py  test_exchange.py  test_health.py  test_integration_live.py  test_kill_switch.py  test_live_executor.py  test_llm_estimator.py  test_llm_router.py  test_market_fetcher.py  test_models.py  test_paper_executor.py  test_portfolio_tracker.py  test_position_manager.py  test_price_feed.py  test_rate_limiting.py  test_reconcile_portfolio.py  test_risk_controller.py  test_risk_fixes.py  test_risk_management.py  test_risk_volume_liquidity.py  test_safe_mode.py  test_service.py  test_settlement_tracker.py  test_signal_engine.py  (+5 more)
(+33 files in other folders)
