[project]
name = "polymarket-glm"
version = "0.1.0"
description = "Polymarket trading framework with signal engine, execution, risk management and paper/live dual mode"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client>=0.28.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "websockets>=12.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
pglm = "polymarket_glm.interface.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
